--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Title</th>
       <th>Body</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -17,7 +17,8 @@
       <tr>
         <td><%= blog.title %></td>
         <td><%= blog.body %></td>
-        <td><%= link_to 'Show', blog %></td>
+        <td><%= link_to blog.status, blog_toggle_status_path(blog) %></td>
+        <td><%= link_to 'Show', blog_path(blog) %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
         <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
