--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,15 +1,13 @@
 <h1>Portfolio Items</h1>
-<%= link_to "Create New Item", new_portfolio_url %>
+<h2> <%= link_to "Create New Item", new_portfolio_url %> </h2>
 
-<p><%= new_portfolio_path %></p>
-<p><%= new_portfolio_url %></p>
-<p><%= portfolios_url %></p>
+
 
 <% @portfolio_items.each do |portfolio_item| %>
-  <p><%= portfolio_item.title %></p>
+  <p><%=link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></p>
   <p><%= portfolio_item.subtitle %></p>
   <p><%= portfolio_item.body %></p>
   <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image != nil%>
   <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
-  <a href="/portfolios/<%=portfolio_item.id %>/edit">Edit two</a>
+  <%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item.id), method: :delete, data: {conform: 'Are you sure?'} %>
 <% end %>
