--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,14 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <% if current_user %>
-      <%= link_to "Logout", destroy_user_session_path, method: :delete%>
+      <p><%= link_to "Logout", destroy_user_session_path, method: :delete%></p>
     <% else %>
     <p><%= link_to "Register",  new_user_registration_path %></p>
-    <p><%= link_to "Login", new_user_session_path %></p>  
+    <p><%= link_to "Login", new_user_session_path %></p>
     <% end %>
     <%= yield %>
+    <% if session[:source] %>
+      <p>Thanks for visiting me from <%= session[:source] %> </p>
+    <% end %>
   </body>
 </html>
