--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -13,7 +13,6 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-
     <% if current_user.is_a?(User) %>
       <p><%= link_to "Logout", destroy_user_session_path, method: :delete%></p>
     <% else %>
@@ -22,15 +21,7 @@
     <% end %>
     <%= yield %>
 
-
-    <div>
-      <div><%=link_to "Home", root_path %></div>
-      <div><%= link_to "About", about_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blog", blogs_path %> </div>
-      <div><%= link_to "Porfolio", portfolios_path %></div>
-    </div>
-
+  <%= render "shared/nav" %>
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %> </p>
     <% end %>
