--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -13,7 +13,8 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-
+    <%= render "shared/nav" %>
+    
     <% if current_user.is_a?(User) %>
       <p><%= link_to "Logout", destroy_user_session_path, method: :delete%></p>
     <% else %>
@@ -21,15 +22,6 @@
     <p><%= link_to "Login", new_user_session_path %></p>
     <% end %>
     <%= yield %>
-
-
-    <div>
-      <div><%=link_to "Home", root_path %></div>
-      <div><%= link_to "About", about_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blog", blogs_path %> </div>
-      <div><%= link_to "Porfolio", portfolios_path %></div>
-    </div>
 
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %> </p>
