--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -13,14 +13,9 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= render "shared/nav" %>
-    
-    <% if current_user.is_a?(User) %>
-      <p><%= link_to "Logout", destroy_user_session_path, method: :delete%></p>
-    <% else %>
-    <p><%= link_to "Register",  new_user_registration_path %></p>
-    <p><%= link_to "Login", new_user_session_path %></p>
-    <% end %>
+    <%= render "shared/nav", location: 'top' %>
+
+    <%= login_helper %>
     <%= yield %>
 
     <% if session[:source] %>
