use content_tag

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,10 +16,7 @@
     <%= login_helper %>
     <%= yield %>
 
-  <%= render "shared/nav", location: 'bottom' %>
-
-    <% if session[:source] %>
-      <p>Thanks for visiting me from <%= session[:source] %> </p>
-    <% end %>
+    <%= render "shared/nav", location: 'bottom' %>
+    <%= source_helper %>
   </body>
 </html>
