--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,5 +1,6 @@
 <tr>
   <td><%= blog.title %></td>
+  <td><%= distance_of_time_in_words_to_now(blog.created_at) %></td>
   <td><%= blog.body %></td>
   <td><%= link_to blog.status, blog_toggle_status_path(blog) %></td>
   <td><%= link_to 'Show', blog_path(blog) %></td>
