--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,12 @@
 
     <%= render "shared/nav", location: 'top' %>
 
-
     <%= login_helper %>
 
     <%= yield %>
+
+    <%= @copyright %>
+
     <%= source_helper %>
   </body>
 </html>
