--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -2,8 +2,8 @@
   <td><%= blog.title %></td>
   <td><%= distance_of_time_in_words_to_now(blog.created_at) %></td>
   <td><%= blog.body %></td>
-  <td><%= link_to blog.status, blog_toggle_status_path(blog) %></td>
-  <td><%= link_to 'Show', blog_path(blog) %></td>
-  <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-  <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to blog.status, blog_toggle_status_path(blog) if logged_in?(:site_admin) %></td>
+  <td><%= link_to 'Show', blog_path(blog)  %></td>
+  <td><%= link_to 'Edit', edit_blog_path(blog) if logged_in?(:site_admin) %></td>
+  <td><%= link_to 'Destroy', blog , method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %></td>
 </tr>
