--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -5,8 +5,14 @@
   <p><%=link_to angular_portfolio_item.title, portfolio_show_path(angular_portfolio_item) %></p>
   <p><%= angular_portfolio_item.subtitle %></p>
   <p><%= angular_portfolio_item.body %></p>
+
   <%= image_tag angular_portfolio_item.thumb_image if angular_portfolio_item.thumb_image != nil%>
-  <%= link_to "Edit", edit_portfolio_path(angular_portfolio_item) %>
-  <%= link_to "Delete Portfolio Item", portfolio_path(angular_portfolio_item), method: :delete, data: {conform: 'Are you sure?'} %>
+
+  <%= link_to "Edit",
+      edit_portfolio_path(angular_portfolio_item) if logged_in?(:site_admin) %>
+
+  <%= link_to "Delete Portfolio Item", portfolio_path(angular_portfolio_item),
+      method: :delete,
+      data: {conform: 'Are you sure?'} if logged_in?(:site_admin) %>
 
 <% end %>
