Implemented styles for the initial blog layout

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,1 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "0329313111" %></p>
-<p><%= number_to_currency "55555" %></p>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7667.689291204181!2d108.1478741851734!3d16.073549544294345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314218d137aba147%3A0x22dceb0b48c4a31c!2zMTbCsDA0JzM1LjEiTiAxMDjCsDA5JzAxLjYiRQ!5e0!3m2!1svi!2s!4v1540870205629" width="1000px;" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
