--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,40 +1,14 @@
-<div class="text-center">
-  <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-    <header class="masthead mb-auto">
-      <div class="inner">
-        <h3 class="masthead-brand">Cover</h3>
-        <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Contact</a>
-        </nav>
-      </div>
-    </header>
-
-    <main role="main" class="inner cover">
-      <h1 class="cover-heading">Cover your page.</h1>
-      <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-      <p class="lead">
-        <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-      </p>
-    </main>
-
-    <footer class="mastfoot mt-auto">
-      <div class="inner">
-        <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      </div>
-    </footer>
-  </div>
-</div>
-
-
-<!--
-<% if current_user %>
-<h1>Hi <%= current_user.first_name if !current_user.name.nil? %></h1>
-<% end %>
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<h1>Blogs</h1>
-<%= @blogs.inspect %>
-<h2>skills</h2>
-<%= @skills.inspect %> -->
+<!-- Page Header -->
+   <header class="masthead" style="background-image: url('/assets/home-bg-b0c2990966a32dbf3fe4ed7f2bafcd37428e9808c660950e66c70a808aab6ab4.jpg')">
+     <div class="overlay"></div>
+     <div class="container">
+       <div class="row">
+         <div class="col-lg-8 col-md-10 mx-auto">
+           <div class="site-heading">
+             <h1>Clean Blog</h1>
+             <span class="subheading">A Blog Theme by Start Bootstrap</span>
+           </div>
+         </div>
+       </div>
+     </div>
+   </header>
