--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -3,6 +3,17 @@
 
 /* stylelint-disable selector-list-comma-newline-after */
 
+p {
+  font-size: 110%;
+}
+
+h2 a:hover {
+  color: green!important;
+  text-decoration: none!important;
+}
+
+
+
 .blog-header {
   line-height: 1;
   border-bottom: 1px solid #e5e5e5;
