--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,15 +1,11 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @blog.body %>
-</p>
-<% if logged_in?(:site_admin) %>
-  <%= link_to 'Edit', edit_blog_path(@blog) %> |
-<% end %>
-<%= link_to 'Back', blogs_path %>
+<div class="col-md-9 blog-main">
+    <h2 class="pb-3 mb-4  border-bottom">
+      <%= @blog.title %>
+    </h2>
+    <% if logged_in?(:site_admin) %>
+      <%= link_to 'Edit', edit_blog_path(@blog) %>
+    <% end %>
+    <p>
+      <%= @blog.body %>
+    </p>
+</div>
