--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -3,6 +3,11 @@
 
 /* stylelint-disable selector-list-comma-newline-after */
 
+.social-link li {
+  font-size: 2em;
+  margin-left: 30px;
+}
+
 p {
   font-size: 110%;
 }
