--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,3 @@
-
   <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
           <div class="col-md-6 px-0">
             <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
@@ -38,11 +37,14 @@
         </div>
   <div class="col-md-9 blog-main">
       <h3 class="pb-3 mb-4 font-italic border-bottom">
-        From the Firehose
+
         <%= link_to 'New Blog', new_blog_path if logged_in?(:site_admin) %>
       </h3>
+      <div id="main-blogs">
         <%= render  @blogs %>
-      <nav class="blog-pagination">
+      </div>
+      <nav hidden class="blog-pagination">
+        <%= will_paginate @blogs %>
         <a class="btn btn-outline-primary" href="#">Older</a>
         <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
       </nav>
