--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -2,9 +2,12 @@
     <div class="p-3 mb-3 bg-light rounded">
       <h4 class="font-italic">About</h4>
       <p class="mb-0">
-
-        Nhân vật ảo với chiếc bụng phệ, rốn lồi, khuôn mặt luôn tỏ vẻ tư lự, trên thông thiên văn, dưới tường địa lý, tam giáo, cửu lưu, tứ thư, ngũ kinh, tinh thần yêu nước trung trinh, đạo đức lung linh, phong tục, luật lệ, bản quyền, Horoscope, vật lý lượng tử... cái gì Lê Bích cũng tưởng là chàng biết.
-
+        Nhân vật ảo với chiếc bụng phệ, rốn lồi,
+         khuôn mặt luôn tỏ vẻ tư lự, trên thông thiên văn,
+          dưới tường địa lý, tam giáo, cửu lưu, tứ thư, ngũ kinh,
+           tinh thần yêu nước trung trinh, đạo đức lung linh, phong tục,
+           luật lệ, bản quyền, Horoscope, vật lý lượng tử...
+           cái gì Lê Bích cũng tưởng là chàng biết.
       </p>
     </div>
 
@@ -28,10 +31,10 @@
 
     <div class="p-3">
       <h4 class="font-italic">Elsewhere</h4>
-      <ol class="list-unstyled">
-        <li><a href="#">GitHub</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Facebook</a></li>
+      <ol class="list-unstyled social-link">
+        <li><a href="https://github.com/Kalipts"><i class="fab fa-github"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+        <li><a href="https://www.facebook.com/Kalipts98"><i class="fab fa-facebook-square"></i></a></li>
       </ol>
     </div>
 
