--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -3,6 +3,10 @@
 
 /* stylelint-disable selector-list-comma-newline-after */
 
+html, body {
+  font-family: athiti, sans-serif!important;
+}
+
 .social-link li {
   font-size: 2em;
   margin-left: 30px;
@@ -25,7 +29,7 @@ h2 a:hover {
 }
 
 .blog-header-logo {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-family:athiti, sans-serif, "Playfair Display", Georgia, "Times New Roman", serif;
   font-size: 2.25rem;
 }
 
@@ -34,7 +38,14 @@ h2 a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-family:athiti, sans-serif, "Playfair Display", Georgia, "Times New Roman", serif;
+}
+
+p {
+    font-family:athiti, sans-serif;
+    font-size: 16.6667px;
+    font-weight: 400;
+    line-height: 30px;
 }
 
 .display-4 {
