--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,7 +1,25 @@
-<p><%=link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></p>
-<p><%= portfolio_item.subtitle %></p>
-<p><%= portfolio_item.body %></p>
-<%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image != nil%>
-<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin)%>
-<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item.id),
-    method: :delete, data: {conform: 'Are you sure?'} if logged_in?(:site_admin)%>
+<div class="col-md-4">
+      <div class="card mb-4 box-shadow">
+        <% if portfolio_item.thumb_image != nil %>
+          <%= image_tag portfolio_item.thumb_image , class: "card-img-top" %>
+        <% end %>
+        <div class="card-body">
+          <p class="card-text">
+            <p><%=link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></p>
+            <p><%= portfolio_item.subtitle %></p>
+            <p><%= portfolio_item.body %></p>
+          </p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+
+              <%=link_to "View", portfolio_show_path(portfolio_item.id), class: 'btn btn-sm btn-outline-secondary' %>
+              <% if logged_in?(:site_admin) %>
+                <%= link_to "Edit", edit_portfolio_path(portfolio_item.id), class: 'btn btn-sm btn-outline-secondary' %>
+                <%= link_to "Delete", portfolio_path(portfolio_item.id), method: :delete, data: {conform: 'Are you sure?'}, class: "btn btn-sm btn-outline-secondary" %>
+              <% end %>
+            </div>
+            <small class="text-muted"><%= distance_of_time_in_words_to_now(portfolio_item.created_at) %></small>
+          </div>
+        </div>
+      </div>
+</div>
