--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,8 @@
-<h1>Portfolio Items</h1>
-<h2> <%= link_to "Create New Item", new_portfolio_url %> </h2>
-
-<%= render partial:'portfolio_item', collection: @portfolio_items %>
+<div class="album py-5 bg-light">
+  <div class="container">
+    <h2> <%= link_to "Create New Item", new_portfolio_url %> </h2>
+    <div class="row">
+        <%= render partial:'portfolio_item', collection: @portfolio_items %>
+    </div>
+  </div>
+</div>
