Updated form styles for porfofilos

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,7 @@
+
 <div class="album py-5 bg-light">
   <div class="container">
-    <h2> <%= link_to "Create New Item", new_portfolio_url %> </h2>
+    <h2> <%= link_to "Create New Item", new_portfolio_url if logged_in?(:admin_site) %> </h2>
     <div class="row">
         <%= render partial:'portfolio_item', collection: @portfolio_items %>
     </div>
