--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,4 +1,3 @@
-
 @import "bootstrap";
 
 :root {
@@ -40,3 +39,8 @@ footer p {
 }
 
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+
+a {
+  color: green;
+}
