--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,29 +1,38 @@
-<%= form_for(@portfolio_item) do |f| %>
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
+<div class="row">
+  <div class="offset-md-2">
 
-  <div class="field">
-    <%= f.label :subtitle %>
-    <%= f.text_field :subtitle %>
   </div>
+  <div class="col-md-7">
+    <%= form_for(@portfolio_item) do |f| %>
 
-  <div class="field">
-    <%= f.label :body %>
-    <%= f.text_area :body %>
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :subtitle %>
+        <%= f.text_field :subtitle , class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :body %>
+        <%= f.text_area :body, class: 'form-control', rows: '12' %>
+      </div>
+
+      <ul class="form-group">
+        <%= f.fields_for :technologies do |technology_form| %>
+        <li>
+          <%= technology_form.label :name %>
+          <%= technology_form.text_field :name, class: 'form-control' %>
+        </li>
+        <%end%>
+      </ul>
+
+      <div class="actions">
+        <%= f.submit "Submit" , class: 'btn btn-primary'%>
+      </div>
+    <% end %>
+
   </div>
-
-  <ul>
-    <%= f.fields_for :technologies do |technology_form| %>
-    <li>
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-    </li>
-    <%end%>
-  </ul>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
